<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>jiggle</name>
  <version>0.0.0</version>
  <description>The jiggle package</description>

  <maintainer email="brian@todo.todo">brian</maintainer>


  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rosbag</depend>
  <depend>rosbag_storage</depend>
  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
